K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    tier: api

spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
        tier: api

    spec:
      containers:
        - name: backend
          image: 846345203699.dkr.ecr.ap-south-2.amazonaws.com/backend:fix1
          imagePullPolicy: Always

          ports:
            - containerPort: 8086

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          # 🔥 STARTUP PROBE (SAFE)
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 120
            periodSeconds: 5
            failureThreshold: 60
            timeoutSeconds: 2

          # ✅ READINESS PROBE (FIXED)
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 2

          # ✅ LIVENESS PROBE (FIXED)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 120
            periodSeconds: 20
            failureThreshold: 5
            timeoutSeconds: 2
