K8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1   # 🔥 FIXED

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
        tier: web

    spec:
      containers:
        - name: frontend

          # 🔥 FIXED REGION
          image: 730024653391.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
